--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -11,28 +11,60 @@
 
     <GridLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:columnCount="3" android:padding="3dp" android:layout_margin="2dp"
+            tools:layout_editor_absoluteY="5dp" tools:layout_editor_absoluteX="5dp">
 
-        <EditText
-                android:layout_width="wrap_content"
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorFreq"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/editFreqHz"/>
-        <TextView
-                android:text="@string/freqHz"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textFreqHz"/>
-        <EditText
-                android:layout_width="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editFreqHz"
+                    android:text="0.0"/>
+            <TextView
+                    android:text="@string/freqHz"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textFreqHz" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorFreq"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:ems="10"
-                android:id="@+id/editFreqCpm"/>
-        <TextView
-                android:text="@string/freqHz"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" android:id="@+id/textFreq"/>
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editFreqCpm"
+                    android:text="0.0"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textFreq" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+
     </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
