--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -65,6 +65,82 @@
                     android:id="@+id/textFreq" android:textColor="@color/colorWhite"/>
         </LinearLayout>
 
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorDb"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp" android:layout_marginTop="10dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editAdb"
+                    android:text="0.0"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textAdb" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorDb"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editVdbMm"
+                    android:text="0.0"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textVdbMm" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorDb"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editVdbM"
+                    android:text="0.0"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textVdbM" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+
     </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
