--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -141,6 +141,212 @@
                     android:id="@+id/textVdbM" android:textColor="@color/colorWhite"/>
         </LinearLayout>
 
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorAcceleration"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp" android:layout_marginTop="10dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editAccelerationG"
+                    android:text="0.0"/>
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:entries="@array/edIzmList"
+                    android:layout_height="wrap_content" android:id="@+id/spinnerG" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textAccelerationG" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorAcceleration"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editAccelerationM"
+                    android:text="0.0"/>
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:entries="@array/edIzmList"
+                    android:layout_height="wrap_content" android:id="@+id/spinnerAccelerationM" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textAccelerationM" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorAcceleration"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editAccelerationMm"
+                    android:text="0.0"/>
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:entries="@array/edIzmList"
+                    android:layout_height="wrap_content" android:id="@+id/spinnerAccelerationMm" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textAccelerationMm" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorVelocity"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp" android:layout_marginTop="10dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editVelocityM"
+                    android:text="0.0"/>
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:entries="@array/edIzmList"
+                    android:layout_height="wrap_content" android:id="@+id/spinnerVelocityM" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textVelocityM" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorVelocity"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editVelocityMm"
+                    android:text="0.0"/>
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:entries="@array/edIzmList"
+                    android:layout_height="wrap_content" android:id="@+id/spinnerVelocityMm" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textVelocityMm" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorDisplacement"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp" android:layout_marginTop="10dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editDisplacementM"
+                    android:text="0.0"/>
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:entries="@array/edIzmList"
+                    android:layout_height="wrap_content" android:id="@+id/spinnerDisplacementM" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textDisplacementM" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_rowSpan="2"
+                android:background="@color/colorDisplacement"
+
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp" android:layout_margin="1dp">
+
+            <EditText
+                    android:background="@color/colorWhite"
+                    android:layout_width="159dp"
+                    android:layout_height="wrap_content"
+                    android:inputType="numberDecimal"
+                    android:ems="10"
+                    android:id="@+id/editDisplacementMm"
+                    android:text="0.0"/>
+            <Spinner
+                    android:layout_width="match_parent"
+                    android:entries="@array/edIzmList"
+                    android:layout_height="wrap_content" android:id="@+id/spinnerDisplacementMm" android:layout_weight="1"/>
+            <TextView
+                    android:text="@string/freqCpm"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/textDisplacementMm" android:textColor="@color/colorWhite"/>
+        </LinearLayout>
+
     </GridLayout>
 
 </android.support.constraint.ConstraintLayout>
