--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,7 +13,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:columnCount="3" android:padding="3dp" android:layout_margin="2dp"
-            tools:layout_editor_absoluteY="5dp" tools:layout_editor_absoluteX="5dp">
+            tools:layout_editor_absoluteY="5dp" tools:layout_editor_absoluteX="5dp" tools:ignore="MissingConstraints">
 
         <LinearLayout
                 android:layout_column="0"
@@ -27,7 +27,7 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
@@ -52,7 +52,7 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
@@ -78,14 +78,14 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editAdb"
                     android:text="0.0"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/aDb"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textAdb" android:textColor="@color/colorWhite"/>
@@ -103,14 +103,14 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editVdbMm"
                     android:text="0.0"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/vDbMmSec"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textVdbMm" android:textColor="@color/colorWhite"/>
@@ -128,14 +128,14 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editVdbM"
                     android:text="0.0"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/vDbMSec"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textVdbM" android:textColor="@color/colorWhite"/>
@@ -154,18 +154,18 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editAccelerationG"
                     android:text="0.0"/>
             <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:entries="@array/edIzmList"
                     android:layout_height="wrap_content" android:id="@+id/spinnerG" android:layout_weight="1"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/AccelerationG"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textAccelerationG" android:textColor="@color/colorWhite"/>
@@ -183,18 +183,18 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editAccelerationM"
                     android:text="0.0"/>
             <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:entries="@array/edIzmList"
                     android:layout_height="wrap_content" android:id="@+id/spinnerAccelerationM" android:layout_weight="1"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/AccelerationMSec2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textAccelerationM" android:textColor="@color/colorWhite"/>
@@ -212,18 +212,18 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editAccelerationMm"
                     android:text="0.0"/>
             <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:entries="@array/edIzmList"
                     android:layout_height="wrap_content" android:id="@+id/spinnerAccelerationMm" android:layout_weight="1"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/AccelerationMmSec2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textAccelerationMm" android:textColor="@color/colorWhite"/>
@@ -242,18 +242,18 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editVelocityM"
                     android:text="0.0"/>
             <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:entries="@array/edIzmList"
                     android:layout_height="wrap_content" android:id="@+id/spinnerVelocityM" android:layout_weight="1"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/velocityMSec"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textVelocityM" android:textColor="@color/colorWhite"/>
@@ -271,18 +271,18 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editVelocityMm"
                     android:text="0.0"/>
             <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:entries="@array/edIzmList"
                     android:layout_height="wrap_content" android:id="@+id/spinnerVelocityMm" android:layout_weight="1"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/velocityMmSec"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textVelocityMm" android:textColor="@color/colorWhite"/>
@@ -301,18 +301,18 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editDisplacementM"
                     android:text="0.0"/>
             <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:entries="@array/edIzmList"
                     android:layout_height="wrap_content" android:id="@+id/spinnerDisplacementM" android:layout_weight="1"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/displacementM"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textDisplacementM" android:textColor="@color/colorWhite"/>
@@ -330,18 +330,18 @@
 
             <EditText
                     android:background="@color/colorWhite"
-                    android:layout_width="159dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:inputType="numberDecimal"
                     android:ems="10"
                     android:id="@+id/editDisplacementMm"
                     android:text="0.0"/>
             <Spinner
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:entries="@array/edIzmList"
                     android:layout_height="wrap_content" android:id="@+id/spinnerDisplacementMm" android:layout_weight="1"/>
             <TextView
-                    android:text="@string/freqCpm"
+                    android:text="@string/displacementMm"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/textDisplacementMm" android:textColor="@color/colorWhite"/>
