--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,23 +14,15 @@
         android:gravity="bottom">
 
     <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="293dp"
+            android:layout_height="107dp"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            app:srcCompat="@mipmap/ic_launcher_round"
-            android:id="@+id/imageView"/>
-
-    <TextView
+            app:srcCompat="@mipmap/logo"
+            android:id="@+id/imageView" android:scaleType="centerCrop"
+            android:adjustViewBounds="true" android:cropToPadding="true"/>
+    <Switch
+            android:text="English/Metric"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="Android Studio"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="android.studio@android.com"
-            android:id="@+id/textView"/>
+            android:layout_height="wrap_content" android:id="@+id/switchMetricSystem"/>
 
 </LinearLayout>
