--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -71,7 +71,7 @@
                         android:text="@string/freqCpm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/textFreq" android:textColor="@color/colorWhite"
+                        android:id="@+id/textFreqCpm" android:textColor="@color/colorWhite"
                         android:layout_marginStart="5dp"
                         android:layout_marginLeft="5dp"
                 />
